--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <div class="row flashes">
-<h4 class="cyan accent-3 center-align white-text header-shadow">Edit Profile</h4> 
+    <h4 class="cyan accent-3 center-align white-text header-shadow">Edit Profile</h4> 
 </div>
 <p class="center-align">Update your profile.</p>
 <div class="row">
@@ -20,37 +19,37 @@
             <!-- name -->
 			<div class="row">
 				<div class="input-field col s12">
-                <i class="fas fa-user prefix cyan-text text-accent-3"></i>
+                    <i class="fas fa-user prefix cyan-text text-accent-3"></i>
 					<input id="my_name" name="my_name" type="text" class="validate"
                     minlength="5" maxlength="50" pattern="^[a-zA-Z0-9 ]{5,15}$" value="{{ user.my_name }}" required>
 					<label for="my_name" class="cyan-text text-accent-3">  Name</label>
 				</div>
 			</div>
             <!-- location -->
-    <div class="row">
-      <div class="input-field col s12">
-        <i class="fas fa-map prefix cyan-text text-accent-3"></i>
-    <select id="" name="location" class="validate" required>
-      {% for location in locations %}
-      {% if location.location == user.location %}
-        <option value="{{ location.location }}" selected>{{ location.location }}</option>
-      {% else %}
-        <option value="{{ location.location }}" >{{ location.location }}</option>
-      {% endif %}
-      {% endfor %}
-    </select>
-    <label for="location"> Your location</label>
-      </div>
-  </div>     
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-map prefix cyan-text text-accent-3"></i>
+                    <select id="location" name="location" class="validate" required>
+                    {% for location in locations %}
+                    {% if location.location == user.location %}
+                    <option value="{{ location.location }}" selected>{{ location.location }}</option>
+                    {% else %}
+                    <option value="{{ location.location }}" >{{ location.location }}</option>
+                    {% endif %}
+                    {% endfor %}
+                    </select>
+                    <label for="location"> Your location</label>
+                </div>
+            </div>     
   <!-- update profile -->
             <div class="row center-align">
-            <button type="submit" class="btn-large cyan accent-3">
-            Update Profile <i class="fas fa-sign-in-alt"></i></button>
-            <a href="{{ url_for('my_profile', username=user.username) }}" class="btn-large light-green accent-4">
-            Cancel<i class="fas fa-times-circle right"></i></a>
+                <button type="submit" class="btn-large cyan accent-3">
+                    Update Profile <i class="fas fa-sign-in-alt"></i>
+                 </button>
+                <a href="{{ url_for('my_profile', username=user.username) }}" class="btn-large light-green accent-4">
+                Cancel<i class="fas fa-times-circle right"></i></a>
             </div>
 		</div>
 	</form>
 </div>
-
 {% endblock %}
