--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<!-- header -->
 <div class="row flashes">
-<h4 class="cyan accent-3 center-align white-text header-shadow">Login</h4> 
-</div><div class="row">
+    <h4 class="cyan accent-3 center-align white-text header-shadow">Login</h4> 
+</div>
+<!-- login form -->
+<div class="row">
 	<form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
 		<div class="card-panel">
         <!-- username -->
@@ -25,20 +28,20 @@
 			</div>
             <!-- register -->
             <div class="row center-align">
-            <button type="submit" class="btn-large cyan accent-3">
-            LOGIN <i class="fas fa-sign-in-alt"></i></button>
+                <button type="submit" class="btn-large cyan accent-3">
+                LOGIN <i class="fas fa-sign-in-alt"></i></button>
             </div>
 		</div>
 	</form>
 </div>
-
+<!-- link to register -->
 <div class="row">
-<div class="col s12">
-<p class="center-align">Haven't joined us yet? 
-<a class="cyan-text text-accent-3" href="{{ url_for('sign_up') }}">
-Sign Up</a>
-</p>
-</div>
+    <div class="col s12">
+        <p class="center-align">Haven't joined us yet? 
+            <a class="cyan-text text-accent-3" href="{{ url_for('sign_up') }}">
+            Sign Up</a>
+        </p>
+    </div>
 </div>
 
 {% endblock %}
