--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row flashes">
-<h4 class="cyan accent-3 center-align white-text header-shadow">Add new category</h4> 
+    <h4 class="cyan accent-3 center-align white-text header-shadow">Add new category</h4> 
 </div>
-  <div class="card-panel grey lighten-5">
+<div class="card-panel grey lighten-5">
   <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
-
   <!-- category name -->
       <div class="row">
         <div class="input-field col s12">
@@ -16,20 +15,17 @@
           <label for="category_name">Category Name</label>
         </div>
       </div>
-     
         <!-- submit button -->
-        <div class="row">
+      <div class="row">
         <div class="col s12 center-align">
           <button class="btn-large cyan accent-3" type="submit">
-          Add Category
-    <i class="fas fa-plus-square right"></i>
-  </button>
-  <a href="{{ url_for('get_categories') }}" class="btn-large light-green accent-4">
-        Cancel<i class="fas fa-times-circle right"></i></a>
+          Add Category <i class="fas fa-plus-square right"></i>
+          </button>
+          <a href="{{ url_for('get_categories') }}" class="btn-large light-green accent-4">
+          Cancel<i class="fas fa-times-circle right"></i></a>
         </div>
-        </div>      
+      </div>      
     </form>
   </div>
-  </div>
-  
+</div>  
 {% endblock %}
