--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -1,41 +1,30 @@
 {% extends 'base.html' %} {% block content %}
-
+<!-- header -->
 <div class="row flashes">
   <h4 class="cyan accent-3 center-align white-text header-shadow">
     {{ username }}'s Profile
   </h4>
 </div>
-{% for user in users %} {% if session.user == user.username %}
+<!-- user profile -->
+{% for user in users %} 
+{% if session.user == user.username %}
 <div class="row">
   <div class="col s12 m8 offset-m2">
     <div class="card-panel" id="profile">
       <div class="col s12 m6">
         <p>
-          <i
-            class="fas fa-user-plus prefix cyan-text text-accent-3 tooltipped sgl-event"
-            data-position="right"
-            data-tooltip="Username"
-          ></i>
-          {{ user.username }}
+          <i class="fas fa-user-plus prefix cyan-text text-accent-3 tooltipped sgl-event" data-position="right" data-tooltip="Username">
+          </i>{{ user.username }}
         </p>
         <div class="line"></div>
         <p>
-          <i
-            class="fas fa-user prefix cyan-text text-accent-3 tooltipped sgl-event"
-            data-position="right"
-            data-tooltip="Name"
-          ></i>
-          {{ user.my_name }}
+          <i class="fas fa-user prefix cyan-text text-accent-3 tooltipped sgl-event" data-position="right" data-tooltip="Name">
+          </i>{{ user.my_name }}
         </p>
         <div class="line"></div>
         <p>
-          <i
-            class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
-            data-position="right"
-            data-tooltip="Location"
-          >
-          </i>
-          {{ user.location }}
+          <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event" data-position="right" data-tooltip="Location">
+          </i>{{ user.location }}
         </p>
         <div class="line"></div>
       </div>
@@ -44,15 +33,15 @@
       <!-- edit button -->
       <div class="row all-events-button">
         <div class="col s12 center-align">
-          <a
-            href="{{ url_for('edit_profile', user_id=user._id) }}"
-            class="btn-large light-green accent-2 all-events-button"
-          >
-            Edit Profile<i class="fas fa-edit right"></i
-          ></a>
+          <a href="{{ url_for('edit_profile', user_id=user._id) }}"
+            class="btn-large light-green accent-2 all-events-button">
+            Edit Profile<i class="fas fa-edit right"></i>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </div>
-{% endif %} {% endfor %} {% endblock %}
+{% endif %} 
+{% endfor %} 
+{% endblock %}
