--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,13 @@
             <li class="tab">
               <a href="{{ url_for('get_categories') }}">Categories</a>
             </li>
-            {% endif %} {% if session.user %}
+            {% endif %} 
+            {% if session.user |lower != "admin"|lower %}
+            <li class="tab">
+              <a href="{{ url_for('contact_us') }}">Contact Us</a>
+            </li>
+            {% endif %} 
+            {% if session.user %}
             <li>
               <a href="{{ url_for('logout') }}" class="waves-effect waves-light text-shadow light-green accent-2 btn">Log Out</a>
             </li>
@@ -82,6 +88,11 @@
           <a href="{{ url_for('get_categories') }}">Manage Categories</a>
         </li>
         {% endif %} 
+        {% if session.user |lower != "admin"|lower %}
+        <li class="tab">
+          <a href="{{ url_for('contact_us') }}">Contact Us</a>
+        </li>
+        {% endif %}
         {% if session.user %}
         <li>
           <a href="{{ url_for('logout') }}">Log Out</a>
