removed placeholders from contact us form

--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -15,18 +15,18 @@
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="fas fa-user prefix cyan-text text-accent-3"></i>
-                                <input type="text" id="name" placeholder="Name" name="name" required class="form-input">
+                                <input type="text" id="name" name="name" required class="form-input">
                                 <label for="name">Name</label>
                             </div>
                             <div class="input-field col s12">
                                 <i class="fas fa-envelope prefix cyan-text text-accent-3"></i>
-                                <input type="email" id="email" placeholder="email" name="email" required class="form-input">
+                                <input type="email" id="email" name="email" required class="form-input">
                                 <label for="email">Email</label>
                             </div>
                             <div class="input-field col s12">
                                 <i class="fas fa-comment-dots prefix cyan-text text-accent-3"></i>
-                                <textarea rows="4" id="message" placeholder="How can we help you?" name="help" required class="materialize-textarea"></textarea>
-                                <label for="message">Message</label>
+                                <textarea rows="4" id="message" name="help" required class="materialize-textarea"></textarea>
+                                <label for="message">How can we help you?</label>
                             </div>
                         </div>
                         <div class="row">
