--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -32,10 +32,16 @@
       </div>
       <!-- edit button -->
       <div class="row all-events-button">
-        <div class="col s12 center-align">
+        <div class="col s12 m6 center-align">
           <a href="{{ url_for('edit_profile', user_id=user._id) }}"
-            class="btn-large light-green accent-2 all-events-button">
+            class="btn-large cyan accent-3 all-events-button">
             Edit Profile<i class="fas fa-edit right"></i>
+          </a>
+        </div>
+        <div class="col s12 m6 center-align">
+          <a href="{{ url_for('my_events', username=session['user']) }}"
+            class="btn-large cyan accent-3 all-events-button">
+            My Events<i class="fas fa-edit right"></i>
           </a>
         </div>
       </div>
