--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -41,7 +41,7 @@
         <div class="col s12 m6 center-align">
           <a href="{{ url_for('my_events', username=session['user']) }}"
             class="btn-large cyan accent-3 all-events-button">
-            My Events<i class="fas fa-edit right"></i>
+            My Events<i class="fas fa-arrow-circle-right right"></i>
           </a>
         </div>
       </div>
