--- a/templates/my_events.html
+++ b/templates/my_events.html
@@ -92,4 +92,12 @@
   {% endif %}
   {% endfor %}
 </div>
+<!-- all events button -->
+    <div class="row all-events-button">
+      <div class="col s12 center-align">
+        <a href="{{ url_for('get_events') }}" class="btn-large light-green accent-2 all-events-button">
+          All Events<i class="fas fa-calendar-alt right"></i>
+        </a>
+      </div>
+    </div>
 {% endblock %}
