added create event link to my events page

--- a/templates/my_events.html
+++ b/templates/my_events.html
@@ -4,7 +4,8 @@
   <h4 class="cyan accent-3 center-align white-text header-shadow">
     Your events
   </h4>
-  <p class="center-align">You can edit or delete your events here</p>
+  <p class="center-align">You can edit or delete your existing events here, or
+      <a href="{{ url_for('create_event') }}" class="cyan-text text-accent-3">create a new event</a>.</p>
 </div>
 <div class="row">
 <!-- show user events -->
